@@ -261,6 +261,9 @@ Core and Builtins
 
 - Code objects now support weak references.
 
+- Issue #7072: isspace(0xa0) is true on Mac OS X
+
+
 C-API
 -----
 
